--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body{
   margin: 0px;
-  background: lightgray;
+  background: gray;
 }
 .fullWidth{
-  width: 100%;
-
+  width: 113%;
 }
+
 /*Common Classes*/
 .mainWidth{
   width: 1000px;
@@ -14,23 +14,59 @@ body{
 .colorWhite{
   background: white;
 }
-.colorPink{
-  background: lightpink;
+.colorBlack{
+  background: black;
 }
 .colorGray{
-  background: darkgray;
+  background: gray;
 }
 .verticalSpacer{
   height: 15px;
 }
 /*Main Classes*/
+/*Top Navigation Section*/
 .topNavigationSect{
 
 }
 .innerNav{
+
   height: 30px;
-  border: 1px solid white;
+  border: 1px solid gray;
+  color: white;
 }
+.innerLeft{
+  width: 417px;
+  float: left;
+  margin: 0px 0px 0px 150px;
+}
+.innerLeft span span{
+  color:orange;
+}
+.innerLeft span{
+  color: white;
+  font-size: 9px;
+  line-height: 31px;
+}
+.innerRight{
+	float:right;
+margin: -20px 135px 0px 0px;
+  line-height: 31px;
+}
+.innerRight ul li{
+  font-size: 9px;
+  /*color: lightgray;*/
+  list-style-type: none;
+  display: inline-block;
+
+}
+.innerRight span{
+  color: lightgray;
+	line-height: 30px;
+	border-right:1px solid lightgray;
+	padding:9px 11px;
+	font-weight: bold;
+}
+/*Slider Section*/
 .sliderSect{
   height: 200px;
 }
